[gd_scene load_steps=23 format=2]

[ext_resource path="res://sprites/floor_left.png" type="Texture" id=1]
[ext_resource path="res://sprites/floor_centre.png" type="Texture" id=2]
[ext_resource path="res://Ptero.tscn" type="PackedScene" id=3]
[ext_resource path="res://PlayArea.gd" type="Script" id=4]
[ext_resource path="res://PlayerBird.gd" type="Script" id=5]
[ext_resource path="res://BirdStork.tscn" type="PackedScene" id=6]
[ext_resource path="res://sprites/floor_top_middle.png" type="Texture" id=7]
[ext_resource path="res://sprites/floor_right_lower1.png" type="Texture" id=8]
[ext_resource path="res://sprites/floor_left_lower.png" type="Texture" id=9]
[ext_resource path="res://sprites/floor_right_lower2.png" type="Texture" id=10]
[ext_resource path="res://sprites/floor_base.png" type="Texture" id=11]
[ext_resource path="res://TestPtero.gd" type="Script" id=12]
[ext_resource path="res://sprites/floor_right.png" type="Texture" id=13]
[ext_resource path="res://PteroTimer.tscn" type="PackedScene" id=14]

[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 279, 51.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 103.5, 2.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 138.5, 3 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 123.75, 24 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 153, 24 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 94.5, 20 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 130, 20 )

[node name="World" type="Node2D"]
script = ExtResource( 12 )

[node name="Ptero" parent="." instance=ExtResource( 3 )]

[node name="PlayArea" type="Node2D" parent="."]
z_index = 5
script = ExtResource( 4 )

[node name="Fire" type="ColorRect" parent="PlayArea"]
margin_left = -2.0
margin_top = 593.0
margin_right = 1033.0
margin_bottom = 613.0
color = Color( 1, 0, 0, 1 )

[node name="Centre" type="StaticBody2D" parent="PlayArea" groups=["floor"]]
position = Vector2( 425, 362 )

[node name="Sprite" type="Sprite" parent="PlayArea/Centre"]
position = Vector2( 26, 7 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="Collider" type="CollisionPolygon2D" parent="PlayArea/Centre"]
position = Vector2( 22, -5 )
polygon = PoolVector2Array( -92, 0, 100, 0, 100, 9, 98, 13, 89, 15, 78, 17, 69, 18, 42, 19, 30, 24, -16, 24, -21, 21, -47, 21, -67, 18, -81, 16, -89, 11, -92, 6 )

[node name="TopMiddle" type="StaticBody2D" parent="PlayArea" groups=["floor"]]
position = Vector2( 266, 97 )

[node name="Sprite" type="Sprite" parent="PlayArea/TopMiddle"]
position = Vector2( 35, 13 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="Collider" type="CollisionPolygon2D" parent="PlayArea/TopMiddle"]
position = Vector2( -118, 0 )
polygon = PoolVector2Array( 22, 0, 284, 0, 284, 5, 284, 16, 274, 20, 237, 20, 223, 23, 163, 23, 160, 27, 95, 27, 92, 24, 58, 23, 41, 20, 36, 18, 29, 16, 24, 13, 22, 6 )

[node name="Left" type="StaticBody2D" parent="PlayArea" groups=["floor"]]
position = Vector2( 0, 75 )

[node name="Sprite" type="Sprite" parent="PlayArea/Left"]
position = Vector2( 31, 12 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Collider" type="CollisionPolygon2D" parent="PlayArea/Left"]
position = Vector2( -5, 2 )
polygon = PoolVector2Array( -4, -1, 86, -1, 86, 6, 84, 14, 68, 21, 26, 21, 25, 18, -4, 18 )

[node name="LeftLower" type="StaticBody2D" parent="PlayArea" groups=["floor"]]
position = Vector2( 0, 277 )

[node name="Sprite" type="Sprite" parent="PlayArea/LeftLower"]
position = Vector2( 90, 15.5 )
scale = Vector2( 3, 3 )
texture = ExtResource( 9 )

[node name="Collider" type="CollisionPolygon2D" parent="PlayArea/LeftLower"]
position = Vector2( -6, 5 )
polygon = PoolVector2Array( -2, 0, 191, 0, 191, 6, 188, 14, 184, 18, 179, 21, 173, 22, 121, 21, 107, 20, 35, 19, 30, 16, -2, 15 )

[node name="Right" type="StaticBody2D" parent="PlayArea" groups=["floor"]]
position = Vector2( 855, 75 )

[node name="Sprite" type="Sprite" parent="PlayArea/Right"]
position = Vector2( 87, 11.5 )
scale = Vector2( 3.56006, 3 )
texture = ExtResource( 13 )

[node name="Collider" type="CollisionPolygon2D" parent="PlayArea/Right"]
position = Vector2( 2, 1 )
polygon = PoolVector2Array( 1, 0, 182, 0, 180, 21, 115, 21, 9, 17, 3, 12, 1.00001, 7 )

[node name="RightLower1" type="StaticBody2D" parent="PlayArea" groups=["floor"]]
position = Vector2( 678, 251 )

[node name="Sprite" type="Sprite" parent="PlayArea/RightLower1"]
position = Vector2( 127, 17 )
scale = Vector2( 3, 3 )
texture = ExtResource( 8 )

[node name="Collider" type="CollisionPolygon2D" parent="PlayArea/RightLower1"]
position = Vector2( 2, 5 )
polygon = PoolVector2Array( 39, 0, 213, 0, 214, 24, 190, 25, 169, 26, 142, 26, 96, 26, 49, 22, 39, 16 )

[node name="RightLower2" type="StaticBody2D" parent="PlayArea" groups=["floor"]]
position = Vector2( 870, 277 )

[node name="Sprite" type="Sprite" parent="PlayArea/RightLower2"]
position = Vector2( 84, 15 )
scale = Vector2( 3.59999, 3 )
texture = ExtResource( 10 )

[node name="Collider" type="CollisionPolygon2D" parent="PlayArea/RightLower2"]
position = Vector2( 3, 5 )
polygon = PoolVector2Array( -2, 0, 161, 0, 161, 15, 133, 18, 114, 18, 93, 15, 69, 22, 16, 22, 0, 18, -2, 7 )

[node name="Base" type="StaticBody2D" parent="PlayArea" groups=["floor"]]
position = Vector2( 482, 508 )
physics_material_override = SubResource( 1 )

[node name="Base" type="Sprite" parent="PlayArea/Base"]
position = Vector2( 1, 47 )
scale = Vector2( 3, 3 )
z_index = 5
texture = ExtResource( 11 )

[node name="Collider" type="CollisionShape2D" parent="PlayArea/Base"]
position = Vector2( 1, 50.5 )
shape = SubResource( 2 )

[node name="BaseLeft" type="StaticBody2D" parent="PlayArea" groups=["floor"]]
position = Vector2( 205, 507 )

[node name="ColorRect" type="ColorRect" parent="PlayArea/BaseLeft"]
margin_left = -206.0
margin_right = -1.0
margin_bottom = 6.0
color = Color( 0.6, 0.26, 0, 1 )

[node name="Collider" type="CollisionShape2D" parent="PlayArea/BaseLeft"]
position = Vector2( -104.5, 2.5 )
shape = SubResource( 3 )

[node name="BaseRight" type="StaticBody2D" parent="PlayArea" groups=["floor"]]
position = Vector2( 762, 507 )

[node name="ColorRect" type="ColorRect" parent="PlayArea/BaseRight"]
margin_right = 277.0
margin_bottom = 6.0
color = Color( 0.6, 0.26, 0, 1 )

[node name="Collider" type="CollisionShape2D" parent="PlayArea/BaseRight"]
position = Vector2( 144.5, 3 )
shape = SubResource( 4 )

[node name="Flames" type="StaticBody2D" parent="PlayArea" groups=["flames"]]
collision_layer = 128
collision_mask = 30

[node name="Left" type="CollisionShape2D" parent="PlayArea/Flames"]
position = Vector2( 121.25, 578 )
shape = SubResource( 5 )

[node name="Right" type="CollisionShape2D" parent="PlayArea/Flames"]
position = Vector2( 881, 578 )
shape = SubResource( 6 )

[node name="Troll" type="Area2D" parent="PlayArea" groups=["troll"]]
collision_layer = 256
collision_mask = 14

[node name="Left" type="CollisionShape2D" parent="PlayArea/Troll"]
position = Vector2( 92.5, 534 )
shape = SubResource( 7 )

[node name="Right" type="CollisionShape2D" parent="PlayArea/Troll"]
position = Vector2( 906, 534 )
shape = SubResource( 8 )

[node name="PlayerBird" type="Node2D" parent="."]
position = Vector2( 276, 49 )
script = ExtResource( 5 )

[node name="Bird" parent="PlayerBird" groups=["player", "player1"] instance=ExtResource( 6 )]
position = Vector2( 191, 277 )
collision_mask = 2045

[node name="DebounceRight" type="Timer" parent="PlayerBird"]
wait_time = 0.2
one_shot = true

[node name="DebounceLeft" type="Timer" parent="PlayerBird"]
wait_time = 0.2
one_shot = true

[node name="PteroTimer" parent="." instance=ExtResource( 14 )]

[node name="PteroStarts" type="Node2D" parent="."]

[node name="Start1" type="Position2D" parent="PteroStarts"]
position = Vector2( 1095, 468 )

[node name="Start2" type="Position2D" parent="PteroStarts"]
position = Vector2( -55, 462 )

[node name="Start3" type="Position2D" parent="PteroStarts"]
position = Vector2( -71, 241 )

[node name="Start4" type="Position2D" parent="PteroStarts"]
position = Vector2( 1093, 241 )

[node name="Start5" type="Position2D" parent="PteroStarts"]
position = Vector2( 1082, 30 )

[node name="Start6" type="Position2D" parent="PteroStarts"]
position = Vector2( -69, 36 )

[connection signal="ready_player1" from="PlayerBird/Bird" to="PlayerBird" method="_on_Bird_ready_player1"]
[connection signal="timeout" from="PlayerBird/DebounceRight" to="PlayerBird" method="_on_DebounceRight_timeout"]
[connection signal="timeout" from="PlayerBird/DebounceLeft" to="PlayerBird" method="_on_DebounceLeft_timeout"]
[connection signal="add_ptero" from="PteroTimer" to="." method="_on_PteroTimer_add_ptero"]
